# SwiftMessage

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.ci.txt  CMakeLists.txt  CMakePresets.json  README.md  all_tables.sql  chat.hpp  create_chat_table.sql  create_chatparticipant_table.sql  create_mediafile_table.sql  create_message_table.sql  create_user_table.sql  database_manager.cpp  database_manager.hpp  drop_tables.sql  message.hpp  run_db_tests.sh  user.hpp
.github/workflows/: build-check.yml  test-workflow.yml
Diagram/: list-of-classes.md
build-tests/: CMakeCache.txt  Makefile  cmake_install.cmake
build-tests/integration_tests/: CTestTestfile.cmake  Makefile  SwiftMessage_Tests  SwiftMessage_Tests[1]_include.cmake  SwiftMessage_Tests[1]_tests.cmake  cmake_install.cmake
google_tests/: CMakeLists.txt  CMakeLists.txt.in  README.md  database_manager_test.cpp  messages_test.cpp  request_manager_test.cpp
include/client/: client.hpp  connection_manager.hpp  interface.hpp
include/common/: chat.hpp  chat_message.hpp  chat_participant.hpp  constants.hpp  message.hpp  messages.hpp  user.hpp
include/screen_handler/: abstract_screen.hpp  chat_screen.hpp  greeting_screen.hpp  interface.hpp  pop_up.hpp  send_screen.hpp  server_screen.hpp  sign_screen.hpp
include/server/: connection_manager.hpp  database_manager.hpp  request_manager.hpp  server.hpp
integration_tests/: CMakeLists.txt  README.md  full_scenario_test.cpp
scripts/: create_client.sh  create_server.sh  create_tables.sql  create_tests.sh  run.sh
scripts/sql_scripts/: create_tables.sql
src/Database/: main.cpp
src/client/: Client.hpp  ClientConnectionManager.hpp  client.cpp  connection_manager.cpp  interface.cpp  main.cpp  readme.md  test.cpp  workcycle.cpp  zombie_interface.cpp
src/screen_handler/: README.md  abstract_screen.cpp  abstract_screen.hpp  chat_screen.cpp  chat_screen.hpp  client_screen.hpp  greeting_screen.cpp  greeting_screen.hpp  interface.cpp  interface.hpp  old_chat_screen.hpp  popup.cpp  send_screen.cpp  server_screen.hpp  sign_screen.cpp  sign_screen.hpp
src/server/: connection_manager.cpp  database_manager.cpp  main.cpp  request_manager.cpp  server.cpp
tests/database/: test_database_manager.cpp
tests/screen_handler/: test_cmake.cpp  test_interface.cpp  utils.hpp
tests/server/: test_database_manager.cpp
